Refactor AgentITest to use Awaitility (#111)
* Replace sleeps with Awaitility
* Lots of refactoring to eliminate duplication and redundancy
* Introduce new method Awaiting#awaitAtMost100ms to further
  reduce duplication
* Store AgentClient in a field; initialize in setUp
* Change lots of explicit types to use 'var' where type is clear

Part of #102